--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ bootJar {
     version =  '1.0.0'
 }
 
+jar {
+	baseName = 'VulnerableApp'
+	version = '1.0.0'
+}
+
 configurations {
     all {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
