--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,22 +14,14 @@ steps:
 - task: Gradle@3
   inputs:
     gradleWrapperFile: 'gradlew'  # Path to your Gradle wrapper
-    tasks: 'build'  # Replace with the tasks you want to run
-    options: '-Xmx3072m' 
+    tasks: 'clean build'  # Replace with the tasks you want to run
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'  # Updated pattern for test result files
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'  # Replace with your JDK version
+    jdkVersionOption: '1.17'  # Replace with your JDK version
     jdkArchitectureOption: 'x64'
-
-- task: Gradle@3
-  inputs:
-    gradleWrapperFile: 'gradlew'
-    tasks: 'clean build'
-    publishJUnitResults: true
-    testResultsFiles: '**/TEST-*.xml'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.17'
     gradleOptions: 
     sonarQubeRunAnalysis: false
     spotBugsAnalysis: false
+
+
