Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pool:
 steps:
 - task: Gradle@3
   inputs:
-    gradleWrapperFile: './gradlew'
+    gradleWrapperFile: './gradle/wrapper/gradle-wrapper.jar'
     tasks: 'clean build'
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
